--- a/Hospeed/app/templates/index.html
+++ b/Hospeed/app/templates/index.html
@@ -75,7 +75,7 @@
   <section class="developer">
     <h2>Meet the Developer</h2>
     <p>I’m Amoni Kevin, a passionate software developer, experienced in building solutions that matter. Hospeed is a portfolio project developed to demonstrate my skills in full-stack development.</p>
-    <a href="https://github.com/bizzy604/Hospeed" class="btn-secondary">View on GitHub</a>
+    <a href="https://github.com/bizzy604/bizzy604.github.io" class="btn-secondary">View on GitHub</a>
   </section>
 
     <!-- Footer -->
