--- a/Hospeed/app/templates/index.html
+++ b/Hospeed/app/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospeed - Real-time Hospital Traffic</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhTs2395_5uFYdDoVSaUKdLeypqnXZ80w&callback=initMap"></script>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
